2009-01-13  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* c_src/xmpp_nss.h.awk, c_src/xmpp_nss.h.js, c_src/xmpp_names.h.awk,
	c_src/xmpp_names.h.js, c_src/xmpp_attrs.h.awk, c_src/xmpp_attrs.h.js:
	Remove unused files.

	* include/exmpp_xmpp.hrl, src/core/exmpp_iq.erl,
	src/core/exmpp_message.erl: Style.

	* src/core/exmpp_stream.erl: Update documentation.
	(set_version_in_attrs/2, set_id_in_attrs/2): Treat the empty binary
	the same way the empty string is treated.
	(parse_version/1): Accept string() again.

	* src/core/exmpp_stringprep.erl (control_reuse_arg/2): Don't treat
	errors from control specially. Reformulate a comment more positively.
	Style.

	* src/core/exmpp_xml.erl: Add documentation to new functions. Style.

	* c_src/exmpp_xml.c (make_attribute): Fix the case where the
	attribute's value length isn't provided.

	* src/core/exmpp_jid.erl: Update documentation. Style.
	(bare_jid_to_jid/2): Add support for an automatically generated random
	resource.

	* testsuite/jid.erl: Restore the too_long_identifiers_test_ test
	although it may not work for now (I'm unable to test right now).
	Style.

	* include/exmpp_jid.hrl: Remove this empty header. A new one may added
	later as an internal header.

2009-01-09  Pablo Polvorin  <pablo.polvorin@process-one.net>

	* src/core/exmpp_stanza.erl: get_type/1, get_lang/1 and get_id/1
	return binary().

	* src/core/exmpp_stream.erl: get_id/1, get_lang/1,
	get_initiating_entity/1 and get_receiving_entity/1 return binary().

	* src/core/exmpp_iq.erl : get_type/1 works on binary attributes.

	* src/core/exmpp_message.erl: Likewise.

	* src/core/exmpp_presence.erl: Likewise.

	* src/networ/exmpp_session.erl: Update to newer interfaces.

2009-01-08  Pablo Polvorin  <pablo.polvorin@process-one.net>

	* c_src/exmpp_xml.c, src/core/exmpp_iq.erl, src/core/exmpp_jid.erl,
	src/core/exmpp_stanza.erl, src/core/exmpp_xml.erl, testsuite/iq.erl,
	testsuite/jid.erl, testsuite/stanza.erl: Use binary to represent
	attribute values.